--- a/package.json
+++ b/package.json
@@ -38,21 +38,25 @@
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "feathers-nedb": "^5.0.1",
+    "feathers-sequelize": "^6.0.1",
     "feathers-swagger": "^1.1.0",
     "helmet": "^3.21.0",
-    "nedb": "^1.8.0",
+    "sequelize": "^5.19.0",
+    "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.1.0",
     "web3": "^1.0.0-beta.55",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/helmet": "0.0.44",
     "@types/jest": "^24.0.18",
-    "@types/nedb": "^1.8.9",
+    "@types/node": "^12.7.5",
     "@types/serve-favicon": "^2.2.31",
+    "@types/validator": "^10.11.3",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
