--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run build && npm run jest --watch",
+    "test:blockchain": "jest BlockchainSynchronizer.test.ts --silent=false --verbose",
+    "test": "npm run build && jest --watch --forceExit",
     "dev": "ts-node-dev --no-notify src/",
     "start": "npm run build && node dist/",
-    "jest": "jest -- --forceExit",
     "build": "shx rm -rf lib/ && tsc"
   },
   "dependencies": {
@@ -34,7 +34,7 @@
     "@feathersjs/express": "^4.3.1",
     "@feathersjs/feathers": "^4.3.1",
     "@feathersjs/socketio": "^4.3.1",
-    "@solidstudio/solid.types": "^1.1.1",
+    "@solidstudio/solid.types": "^1.1.3",
     "async-polling": "^0.2.1",
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
