--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "test:blockchain": "jest BlockchainSynchronizer.test.ts --silent=false --verbose",
     "test:blocks": "jest blocks.test.ts --forceExit --watch --silent=false --verbose",
     "test:transactions": "jest transactions.test.ts --forceExit --watch --silent=false --verbose",
+    "test:transactions-receipts": "jest transaction-receipts.test.ts --forceExit --watch --silent=false --verbose",
     "test:connections": "jest connections.test.ts --forceExit --watch --silent=false --verbose",
-    "test": "npm run build && jest --watch --forceExit",
+    "test:contract-definitions": "jest contract-definitions.test.ts --forceExit --watch --silent=false --verbose",
+    "test:contracts": "jest contracts.test.ts --forceExit --watch --silent=false --verbose",
+    "test": "npm run build && jest --watch --forceExit --runInBand",
     "dev": "ts-node-dev --no-notify src/",
     "start": "npm run build && node dist/",
     "build": "shx rm -rf lib/ && tsc"
@@ -37,7 +40,7 @@
     "@feathersjs/express": "^4.3.1",
     "@feathersjs/feathers": "^4.3.1",
     "@feathersjs/socketio": "^4.3.1",
-    "@solidstudio/solid.types": "^1.1.3",
+    "@solidstudio/solid.types": "^1.1.4",
     "async-polling": "^0.2.1",
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
