added traces models and all tests passing

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "test:connections": "jest connections.test.ts --forceExit --watch --silent=false --verbose",
     "test:contract-definitions": "jest contract-definitions.test.ts --forceExit --watch --silent=false --verbose",
     "test:contracts": "jest contracts.test.ts --forceExit --watch --silent=false --verbose",
+    "test:traces": "jest traces.test.ts --forceExit --watch --silent=false --verbose",
+    "test:api-integration": "jest app.test.ts --forceExit --watch --silent=false --verbose",
     "test": "npm run build && jest --watch --forceExit --runInBand",
     "dev": "ts-node-dev --no-notify src/",
     "start": "npm run build && node dist/",
@@ -40,7 +42,7 @@
     "@feathersjs/express": "^4.3.1",
     "@feathersjs/feathers": "^4.3.1",
     "@feathersjs/socketio": "^4.3.1",
-    "@solidstudio/solid.types": "^1.1.4",
+    "@solidstudio/solid.types": "^1.1.8",
     "async-polling": "^0.2.1",
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
