--- a/package.json
+++ b/package.json
@@ -12,61 +12,19 @@
   },
   "contributors": [],
   "bugs": {},
-  "directories": {
-    "lib": "src",
-    "test": "test/",
-    "config": "config/"
-  },
   "engines": {
     "node": "^10.0.0",
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test:blockchain": "jest BlockchainSynchronizer.test.ts --silent=false --verbose --forceExit --watch",
-    "test:blocks": "jest blocks.test.ts --forceExit --watch --silent=false --verbose",
-    "test:transactions": "jest transactions.test.ts --forceExit --watch --silent=false --verbose",
-    "test:transactions-receipts": "jest transaction-receipts.test.ts --forceExit --watch --silent=false --verbose",
-    "test:connections": "jest connections.test.ts --forceExit --watch --silent=false --verbose",
-    "test:contract-definitions": "jest contract-definitions.test.ts --forceExit --watch --silent=false --verbose",
-    "test:contracts": "jest contracts.test.ts --forceExit --watch --silent=false --verbose",
-    "test:traces": "jest traces.test.ts --forceExit --watch --silent=false --verbose",
-    "test:api-integration": "jest app.test.ts --forceExit --watch --silent=false --verbose",
-    "test": "npm run build && jest --watch --forceExit --runInBand",
-    "dev": "ts-node-dev --no-notify src/",
-    "start": "npm run build && node dist/",
-    "build": "shx rm -rf lib/ && tsc"
+    "start": "ts-node-dev --no-notify src/"
   },
   "dependencies": {
-    "@feathersjs/configuration": "^4.3.1",
-    "@feathersjs/errors": "^4.3.1",
-    "@feathersjs/express": "^4.3.1",
-    "@feathersjs/feathers": "^4.3.1",
-    "@feathersjs/socketio": "^4.3.1",
-    "@solidstudio/solid.types": "^1.1.10",
-    "async-polling": "^0.2.1",
-    "bottleneck": "^2.19.5",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "feathers-sequelize": "^6.0.1",
-    "feathers-swagger": "^1.1.0",
-    "helmet": "^3.21.0",
-    "sequelize": "^5.19.0",
-    "sequelize-cli": "^5.5.1",
-    "serve-favicon": "^2.5.0",
-    "sqlite3": "^4.1.0",
-    "web3": "^1.0.0-beta.55",
-    "web3-utils": "^1.0.0-beta.55",
-    "winston": "^3.2.1"
+    "@solid-explorer/server": "^1.0.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.27",
-    "@types/compression": "^1.0.1",
-    "@types/cors": "^2.8.6",
-    "@types/helmet": "0.0.44",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
-    "@types/serve-favicon": "^2.2.31",
-    "@types/validator": "^10.11.3",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
